--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,24 @@ find_package(Boost 1.84.0 REQUIRED)
 
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
+
+    include_directories(
+            ${CMAKE_SOURCE_DIR}/EratosthenesSieve
+            ${CMAKE_SOURCE_DIR}/FermatsAlgorithm
+            ${CMAKE_SOURCE_DIR}/MillerRabin
+            ${CMAKE_SOURCE_DIR}/PollardsAlgorithm
+            ${CMAKE_SOURCE_DIR}/TrialDivision
+            ${CMAKE_SOURCE_DIR}/Combinations
+            ${CMAKE_SOURCE_DIR}/Exceptions
+            ${CMAKE_SOURCE_DIR}/Useful
+            ${CMAKE_SOURCE_DIR}/Tests
+            ${CMAKE_SOURCE_DIR}/UseCases
+    )
+
     add_executable(
             main main.cpp
-            project.cpp
             EratosthenesSieve/sieve.cpp
             TrialDivision/trialDiv.cpp
-            Pseudoprimes/pseudoprimes.cpp
             Useful/algorithms.cpp
             Useful/profiler.cpp
             FermatsAlgorithm/fermatsFact.cpp
@@ -22,17 +34,23 @@ if(Boost_FOUND)
             Tests/test_sieve.cpp
             Tests/test_fermatsFact.cpp
             Tests/test_trialDiv.cpp
+            Tests/test_pollardAlg.cpp
+            Tests/test_MillerRabin.cpp
+            Tests/test_combination1.cpp
+            Tests/test_combination2.cpp
             UseCases/usages.cpp
             UseCases/useTrialDivision.cpp
             UseCases/useSieve.cpp
             UseCases/useAlgorithms.cpp
             UseCases/useFermat.cpp
             UseCases/usePollard.cpp
-            UseCases/testAKS.cpp
-            Exceptions/except.cpp
-            AKSAlgorithm/AKSAlg.cpp
-            MillerRabin/MillerRabin.cpp
             UseCases/useMillerRabin.cpp
+            UseCases/useCombinations.cpp
+            Combinations/combination1.cpp
+            Combinations/combination2.cpp
+            Exceptions/except.cpp
+            MillerRabin/MillerRabin.cpp
+
     )
     target_link_libraries(main boost::boost)
 endif()
@@ -54,3 +72,5 @@ enable_testing()
 
 target_link_libraries(main GTest::gtest_main)
 include(GoogleTest)
+
+#add_test(NAME MyTest COMMAND main --gtest_output=xml:report.xml)
